support new checkers in proto
